--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ EMAIL: ytheophi@uci.edu
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a> <a href="resume.pdf" target="_blank">Resume</a> <a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a> <a href="Resume.pdf" target="_blank">Resume</a> <a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -101,10 +101,5 @@ EMAIL: ytheophi@uci.edu
     <p>&copy; 2025 Yovan Theophilus.</p>
     <p>Connect with me on <a href="https://linkedin.com/in/yovan-theophilus-b927b427a/" target="_blank">LinkedIn</a>.</p>
   </footer>
-  <p>
-    <a href="http://validator.w3.org/check?uri=referer">
-       W3C validator
-    </a>
-  </p>
 </body>
 </html>
