--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a> <a href="resume.pdf" target="_blank">Resume</a> <a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a> <a href="Resume.pdf" target="_blank">Resume</a> <a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
