--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ EMAIL: ytheophi@uci.edu
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a> <a href="https://github.com/ytheophi/ytheophi.github.io/blob/main/Resume.pdf" target="_blank">Resume</a> <a href="contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a> <a href="resume.pdf" target="_blank">Resume</a> <a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
