--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@ EMAIL: ytheophi@uci.edu
   <main>
     <section id="hero">
       <h1>Welcome to My Portfolio</h1>
-      <p>Hi, I am Yovan Theophilus, currently majoring in Computer Science, specializing in Artificial Intelligence.</p>
+      <p>Hi, I am Yovan Theophilus, a Senior Student at University of California, Irvine</p>
+      <p>Currently majoring in Computer Science, specializing in Artificial Intelligence while also pursuing a minor degree in Informatics.</p>
     </section>
   </main>
 
