--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@ EMAIL: ytheophi@uci.edu
   <main>
     <section id="hero">
       <h1>Welcome to My Portfolio</h1>
+      <figure>
+        <img src="uci_logo.jpg" alt="Logo of UCI" style="max-width: 300px; border-radius: 15px;">
+      </figure>
       <p>Hi, I am Yovan Theophilus, a Senior Student at University of California, Irvine</p>
       <p>Currently majoring in Computer Science, specializing in Artificial Intelligence while also pursuing a minor degree in Informatics.</p>
     </section>
